Noteworthy changes in version 2.0.0 (unreleased)
------------------------------------------------

 * Removed the gpgme_attr_t enums and their functions which were
   deprecated since 2003.  [rMd54d6eaa64]

 * Removed the never implemented or announced GPGME_EXPORT_MODE_NOUID
   flags.  [rMd54d6eaa64]

 * Removed the entire trustlist feature which worked anyway only for a
   short period in 2003.  [T4834]

 * Interface changes relative to the 1.24 branch:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 gpgme_attr_t                            REMOVED.
 gpgme_get_sig_ulong_attr                REMOVED.
 gpgme_get_sig_string_attr               REMOVED.
 gpgme_key_get_string_attr               REMOVED.
 gpgme_key_get_ulong_attr                REMOVED.
 gpgme_key_sig_get_string_attr           REMOVED.
 gpgme_key_sig_get_ulong_attr            REMOVED.
 gpgme_trust_item_get_string_attr        REMOVED.
 gpgme_trust_item_get_int_attr           REMOVED.
 GPGME_EXPORT_MODE_NOUID                 REMOVED.
 GPGME_EVENT_NEXT_TRUSTITEM              REMOVED.
 gpgme_trust_item_t                      REMOVED.
 GpgmeTrustItem                          REMOVED.
 gpgme_op_trustlist_start                REMOVED.
 gpgme_op_trustlist_next                 REMOVED.
 gpgme_op_trustlist_end                  REMOVED.
 gpgme_trust_item_ref                    REMOVED.
 gpgme_trust_item_unref                  REMOVED.
 gpgme_trust_item_release                REMOVED.


Noteworthy changes in version 1.24.1 (2024-12-04)
-------------------------------------------------

 * Support the Kyber algorithm in key listings.

 * Allow building on some older Linux platforms.  [rM4a62318422]

 * Interface changes relative to the 1.24.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 GPGME_PK_KYBER                          NEW enum value.

 [c=C44/A33/R1 cpp=C27/A21/R1 qt=C21/A6/R1]

 Release-info: https://dev.gnupg.org/T7440
